--- a/.config/emacs/config.org
+++ b/.config/emacs/config.org
@@ -361,58 +361,37 @@ This fires up every time I open emacs
 
 ** LSP
 #+BEGIN_SRC emacs-lisp
-  (use-package lsp-mode
-   :commands lsp
-   :custom
-   (lsp-prefer-flymake nil)
-   (lsp-completion-provider :none) ;; we use Corfu!
-    :init
-    (defun my/orderless-dispatch-flex-first (_pattern index _total)
-      (and (eq index 0) 'orderless-flex))
-
-    (defun my/lsp-mode-setup-completion ()
-      (setf (alist-get 'styles (alist-get 'lsp-capf completion-category-defaults))
-            '(orderless)))
-
-    ;; Optionally configure the first word as flex filtered.
-    (add-hook 'orderless-style-dispatchers #'my/orderless-dispatch-flex-first nil 'local)
-
-    ;; Optionally configure the cape-capf-buster.
-    (setq-local completion-at-point-functions (list (cape-capf-buster #'lsp-completion-at-point)))
-   :config
-   (setq lsp-keymap-prefix "C-c l"
-         lsp-eslint-auto-fix-on-save t
-         lsp-modeline-diagnostics-enable nil)
+    (use-package lsp-mode
+     :commands lsp
+     :custom
+     (lsp-prefer-flymake nil)
+     (lsp-completion-provider :none) ;; we use Corfu!
+     :config
+     (setq lsp-keymap-prefix "C-c l")
  
-   :hook ((typescript-ts-mode . lsp)
-          (lsp-completion-mode . my/lsp-mode-setup-completion)
-          (lsp-mode . yas-minor-mode)
-          (lsp-mode . lsp-enable-which-key-integration)))
-(use-package lsp-ui
- :commands lsp-ui-mode
- :bind ("M-d" . lsp-ui-doc-toggle)
- :custom
- (lsp-ui-doc-alignment 'at-point)
- :config
- (setq lsp-ui-sideline-show-diagnostics t
-       lsp-ui-sideline-show-hover nil)
- :hook
- (lsp-mode . lsp-ui-mode))
+     :hook ((typescript-ts-mode . lsp)
+            (lsp-mode . yas-minor-mode)
+            (lsp-mode . lsp-enable-which-key-integration)))
+  (use-package lsp-ui
+   :commands lsp-ui-mode
+   :bind ("M-d" . lsp-ui-doc-toggle)
+   :custom
+   (lsp-ui-doc-alignment 'at-point)
+   :config
+   (setq lsp-ui-sideline-show-diagnostics t
+         lsp-ui-sideline-show-hover nil)
+   :hook
+   (lsp-mode . lsp-ui-mode))
 
-(use-package flycheck
- :ensure t
- :init (global-flycheck-mode))
+  (use-package flycheck
+   :ensure t
+   :init (global-flycheck-mode))
 #+END_SRC
 ** Typescript
 #+BEGIN_SRC emacs-lisp
 (use-package typescript-ts-mode
   :ensure t
-  :mode ("\\.ts\\'" . typescript-ts-mode)
-  :hook
-  (typescript-ts-mode . electric-pair-mode)
-  :config
-  (setq indent-tabs-mode t
-	tab-width 4))
+  :mode ("\\.ts\\'" . typescript-ts-mode))
 #+END_SRC
 ** Rust
 #+BEGIN_SRC emacs-lisp
@@ -460,8 +439,9 @@ This fires up every time I open emacs
     :ensure t
     :bind (
       :map copilot-mode
-      ("<tab>" . 'copilot-accept-completion)
-      ("<backtab>" . 'copilot-accept-completion-by-word))
+     ;; ("<tab>" . 'copilot-accept-completion)
+     ;; ("<backtab>" . 'copilot-accept-completion-by-word))
+        ("<backtab>" . 'copilot-accept-completion-by-word))
     :hook
     (lsp-mode . copilot-mode))
 #+END_SRC
