--- a/.config/emacs/config.org
+++ b/.config/emacs/config.org
@@ -335,6 +335,9 @@ I created in ./early-init.el
      (setq lsp-keymap-prefix "C-c l")
      (setq lsp-idle-delay 0.500)
      (setq lsp-log-io nil) ; if set to true can cause a performance hit
+     ;; ESLINT configuration
+     (setq lsp-eslint-auto-fix-on-save t)
+     (setq lsp-eslint-enable t)
      :hook ((typescript-ts-mode . lsp)
             (lsp-mode . yas-minor-mode)
             (lsp-mode . lsp-enable-which-key-integration)))
@@ -353,18 +356,23 @@ I created in ./early-init.el
    :ensure t
    :init (global-flycheck-mode))
 #+END_SRC
-*** Treemacs
-#+BEGIN_SRC emacs-lisp
-  (use-package lsp-treemacs
-    :ensure t
-    :config
-    (setq lsp-treemacs-sync-mode 1))
-#+END_SRC
 *** Typescript
 #+BEGIN_SRC emacs-lisp
-(use-package typescript-ts-mode
-  :ensure t
-  :mode ("\\.ts\\'" . typescript-ts-mode))
+  ;; CURRENTLY THIS DOES NOT WORK
+
+
+  (defun show-hello-world-message ()
+    "Create a buffer and display a 'Hello World' message."
+    (interactive)
+    (let ((buf (generate-new-buffer "*Hello World*")))
+      (with-current-buffer buf
+        (insert "Hello World")
+        (display-buffer buf))))
+
+    (use-package typescript-ts-mode
+      :ensure t
+      ;;:hook (lsp--before-save . show-hello-world-message)
+      :mode ("\\.ts\\'" . typescript-ts-mode))
 #+END_SRC
 *** Rust
 #+BEGIN_SRC emacs-lisp
@@ -386,7 +394,130 @@ I created in ./early-init.el
 			 compilation-scroll-output t
 			 flycheck-checker 'rustic-clippy))))
 #+END_SRC
+*** Treemacs
+#+BEGIN_SRC emacs-lisp
+  (use-package lsp-treemacs
+    :ensure t
+    :config
+    (setq lsp-treemacs-sync-mode 1))
+#+END_SRC
+** Tree file navigation
+#+begin_src emacs-lisp
+(use-package treemacs
+  :ensure t
+  :defer t
+  :init
+  (with-eval-after-load 'winum
+    (define-key winum-keymap (kbd "M-0") #'treemacs-select-window))
+  :config
+  (progn
+    (setq treemacs-collapse-dirs                   (if treemacs-python-executable 3 0)
+          treemacs-deferred-git-apply-delay        0.5
+          treemacs-directory-name-transformer      #'identity
+          treemacs-display-in-side-window          t
+          treemacs-eldoc-display                   'simple
+          treemacs-file-event-delay                2000
+          treemacs-file-extension-regex            treemacs-last-period-regex-value
+          treemacs-file-follow-delay               0.2
+          treemacs-file-name-transformer           #'identity
+          treemacs-follow-after-init               t
+          treemacs-expand-after-init               t
+          treemacs-find-workspace-method           'find-for-file-or-pick-first
+          treemacs-git-command-pipe                ""
+          treemacs-goto-tag-strategy               'refetch-index
+          treemacs-header-scroll-indicators        '(nil . "^^^^^^")
+          treemacs-hide-dot-git-directory          t
+          treemacs-indentation                     2
+          treemacs-indentation-string              " "
+          treemacs-is-never-other-window           nil
+          treemacs-max-git-entries                 5000
+          treemacs-missing-project-action          'ask
+          treemacs-move-forward-on-expand          nil
+          treemacs-no-png-images                   nil
+          treemacs-no-delete-other-windows         t
+          treemacs-project-follow-cleanup          nil
+          treemacs-persist-file                    (expand-file-name ".cache/treemacs-persist" user-emacs-directory)
+          treemacs-position                        'left
+          treemacs-read-string-input               'from-child-frame
+          treemacs-recenter-distance               0.1
+          treemacs-recenter-after-file-follow      nil
+          treemacs-recenter-after-tag-follow       nil
+          treemacs-recenter-after-project-jump     'always
+          treemacs-recenter-after-project-expand   'on-distance
+          treemacs-litter-directories              '("/node_modules" "/.venv" "/.cask")
+          treemacs-project-follow-into-home        nil
+          treemacs-show-cursor                     nil
+          treemacs-show-hidden-files               t
+          treemacs-silent-filewatch                nil
+          treemacs-silent-refresh                  nil
+          treemacs-sorting                         'alphabetic-asc
+          treemacs-select-when-already-in-treemacs 'move-back
+          treemacs-space-between-root-nodes        t
+          treemacs-tag-follow-cleanup              t
+          treemacs-tag-follow-delay                1.5
+          treemacs-text-scale                      nil
+          treemacs-user-mode-line-format           nil
+          treemacs-user-header-line-format         nil
+          treemacs-wide-toggle-width               70
+          treemacs-width                           35
+          treemacs-width-increment                 1
+          treemacs-width-is-initially-locked       t
+          treemacs-workspace-switch-cleanup        nil)
 
+    ;; The default width and height of the icons is 22 pixels. If you are
+    ;; using a Hi-DPI display, uncomment this to double the icon size.
+    ;;(treemacs-resize-icons 44)
+
+    (treemacs-follow-mode t)
+    (treemacs-filewatch-mode t)
+    (treemacs-fringe-indicator-mode 'always)
+    (when treemacs-python-executable
+      (treemacs-git-commit-diff-mode t))
+
+    (pcase (cons (not (null (executable-find "git")))
+                 (not (null treemacs-python-executable)))
+      (`(t . t)
+       (treemacs-git-mode 'deferred))
+      (`(t . _)
+       (treemacs-git-mode 'simple)))
+
+    (treemacs-hide-gitignored-files-mode nil))
+  :bind
+  (:map global-map
+        ("M-0"       . treemacs-select-window)
+        ("C-x t 1"   . treemacs-delete-other-windows)
+        ("C-x t t"   . treemacs)
+        ("C-x t d"   . treemacs-select-directory)
+        ("C-x t B"   . treemacs-bookmark)
+        ("C-x t C-t" . treemacs-find-file)
+        ("C-x t M-t" . treemacs-find-tag)))
+
+(use-package treemacs-evil
+  :after (treemacs evil)
+  :ensure t)
+
+(use-package treemacs-projectile
+  :after (treemacs projectile)
+  :ensure t)
+
+(use-package treemacs-icons-dired
+  :hook (dired-mode . treemacs-icons-dired-enable-once)
+  :ensure t)
+
+(use-package treemacs-magit
+  :after (treemacs magit)
+  :ensure t)
+
+(use-package treemacs-persp ;;treemacs-perspective if you use perspective.el vs. persp-mode
+  :after (treemacs persp-mode) ;;or perspective vs. persp-mode
+  :ensure t
+  :config (treemacs-set-scope-type 'Perspectives))
+
+(use-package treemacs-tab-bar ;;treemacs-tab-bar if you use tab-bar-mode
+  :after (treemacs)
+  :ensure t
+  :config (treemacs-set-scope-type 'Tabs))
+#+end_src
 ** Org notifications
 #+BEGIN_SRC emacs-lisp
 (use-package org-wild-notifier
